# credit-default-model

./: README.md  main.py  pyproject.toml
docs/: timeline.md
notebooks/: first_explore_and_clean.ipynb
src/features/: engineer_credit.py
