[project]
name = "home-credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
